scss cleaned up, emojis moved around, some spacing fixes

--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -4,12 +4,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
 @import url(https://fonts.googleapis.com/css?family=Karla:400,400i,700);
 @import url(https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono);
-
-// @import "reset/normalize";
-
-// @import "custom";
-// @import "base/webfonts";
-
 @import "components/nav";
 @import "components/icons";
 
@@ -21,6 +15,14 @@ $karla: 'Karla', sans-serif;
 $oxygen: 'Oxygen', sans-serif;
 $oxygen-mono: 'Oxygen Mono', monospace;
 $enable-responsive-font-sizes: true;
+
+// Colors
+$grey:   #808080;
+$red:    #f33;
+$white:  #ffffff;
+$indigo: #4b0082;
+$yellow: #ffff00;
+$cyan:   #35bdff;
 
 // Styles
 body {
@@ -43,16 +45,16 @@ h1, h2, h3, h4, h5, h6 {
   padding: 1px 8px;//0.19em;
 
   &.red {
-    background-color: #f33;
+    background-color: $red;
   }
 
   &.grey {
-    background-color: grey;
+    background-color: $grey;
   }
 
   &.white {
-    background-color: #ffffff;
-    color: #f33;
+    background-color: $white;
+    color: $red;
   }
 }
 
@@ -64,48 +66,47 @@ hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 8px;
-  border-top: 1px solid #f33;
+  border-top: 1px solid $red;
 }
 
-/* Footer */
+#footer {
+  // @include vendor('align-self', 'flex-end');
+  width: 100%;
+  // padding: _size(element-margin) 0 0 0;
+  // color: rgba(255,255,255,0.75);
+  cursor: default;
+  text-align: center;
 
-  #footer {
-    // @include vendor('align-self', 'flex-end');
-    width: 100%;
-    // padding: _size(element-margin) 0 0 0;
-    // color: rgba(255,255,255,0.75);
-    cursor: default;
-    text-align: center;
+  .copyright {
+    margin: 0;
+    padding: 0;
+    font-size: 0.9em;
+    list-style: none;
 
-    .copyright {
-      margin: 0;
-      padding: 0;
-      font-size: 0.9em;
-      list-style: none;
+    li {
+      display: inline-block;
+      // margin: 0 0 0 (0.85em - (_size(letter-spacing) * 2));
+      padding: 0 0 0 0.85em;
+      // border-left: solid _size(border-width) rgba(255,255,255,0.5);
+      line-height: 1;
 
-      li {
-        display: inline-block;
-        // margin: 0 0 0 (0.85em - (_size(letter-spacing) * 2));
-        padding: 0 0 0 0.85em;
-        // border-left: solid _size(border-width) rgba(255,255,255,0.5);
-        line-height: 1;
-
-        &:first-child {
-          border-left: 0;
-        }
+      &:first-child {
+        border-left: 0;
       }
     }
   }
+}
 
-/* Jumbotron */
-  // .jumbotron {
-  //   background-color: #ffffff;
-  // }
+.jumbotron {
+  background-color: #ffffff;
+}
 
-header.masthead {
-  padding-top: 8rem;
-  padding-bottom: 13rem;
-  border-bottom: 57px solid #f33;
+header {
+  &.masthead {
+    padding-top: 8rem;
+    padding-bottom: 13rem;
+    border-bottom: 57px solid #f33;
+  }
   // border-bottom: 57px solid #f33;
   // border-bottom: 31px solid #f33;
   // border-bottom: 31px solid #F35F19;
@@ -143,7 +144,9 @@ header.masthead {
 }
 
 @media (min-width: 768px) {
-  .h-md-100 { height: 100vh; }
+  .h-md-100 {
+    height: 100vh;
+  }
 }
 
 .btn-round {
@@ -151,19 +154,19 @@ header.masthead {
 }
 
 .bg-indigo {
-  background: #4b0082;
+  background: $indigo;
 }
 
 .bg-red {
-  background: #f33;
+  background: $red;
 }
 
 .bg-yellow {
-  background: #ffff00;
+  background: $yellow;
 }
 
 .text-cyan {
-  color: #35bdff;
+  color: $cyan;
 }
 
 .icon-list {
